# image-to-text-to-speech

./: .gitignore  README.md  core.py  example.env  imagens_para_testes.md  pyproject.toml
